Everything done except media queries to prevent portfolio cards from overlapping.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-color: #ffffff;
     color: #777777;
@@ -43,39 +43,20 @@ a:-webkit-any-link {
     color: #777777;
     cursor: pointer;
     text-decoration: none;
-}
-
-nav {
-    position: relative;
-    font-size: 16px;
-    float: right;
-    padding: 28px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-}
-
-.nav-link {
-    padding: 0px 10px 0px 10px;
-}
-
-a:hover {
-    text-decoration: underline;
-}
+} */
 
 #bio-image {
-    width: 100px;
+    width: 400px;
     float: left;
     padding-right: 20px;
-    margin-top: 15px;
+    margin-top: 5px;
 }
 
 .container {
-    border-bottom: 6px solid #4aaaa5;
-    display: block;
-    z-index: 1;
-    clear: both;
+    height: 600px;
 }
 
-.main-content {
+/* .main-content {
     max-width: 930px;
     background-color: #ffffff;
     border: 1px solid #dddddd;
@@ -84,13 +65,13 @@ a:hover {
     height: 800px;
     padding: 20px;
     clear: both;
-}
+} */ */
 
 p {
     line-height: 24px;
 }
 
-.portfolio {
+/* .portfolio {
     position: relative;
     display: block:
     float:left;
@@ -150,39 +131,21 @@ p {
 .btn-6 {
     top: 380px;
     left: 508px;
-}
-
-
-input[type=submit] {
-    background: #4aaaa5;
-    color: #fff;
-    border: 0 none;
-    cursor: pointer;
-    padding: 10px 20px 10px 20px;
-}
-
-input[type=text] {
-    color: #777777;
-    padding-left: 10px;
-}
-
-input[type=email] {
-    color: #777777;
-    padding-left: 10px;
-}
-
-/* input[placeholder] {
-    color: #dddddd;
-    padding-left: 10px;
 } */
 
-.site-footer {
-    background-color: #666666;
-    display: block;
-    z-index: 1;
-    text-align: center;
-    padding-top: 40px;
-    padding-bottom: 5px;
-    font-size: 14px;
-    font-style: bold;
+row {
+    margin-bottom: 25px;
+}
+
+@media screen and (max-width: 992px) {
+    .card {
+        margin-right: 25px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #bio-image {
+        margin-right: 100px;
+        margin-bottom: 20px;
+    }
 }
